src/antlr/BasicParser.java
// Generated from ./BasicParser.g4 by ANTLR 4.4
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EXCLAMATION_MARK=35, WHILE=20, FST=26, BOOL_TYPE=29, MOD=41, GREATER_OR_EQUAL=45, 
		CHAR=52, DO=21, ID=59, NOT_EQUALS=49, ORD=37, LOGICAL_AND=50, IF=16, FREE=11, 
		IMPORT=3, UPPERCASE=63, CLOSE_PARENTHESES=2, THEN=17, SMALLER_THAN=46, 
		COMMA=4, DONE=22, IS=9, PRINTLN=15, EQUAL=6, BEGIN=7, LOGICAL_OR=51, RETURN=12, 
		OPEN_SQUARE=32, EQUALS_EQUALS=48, PLUS=42, PAIR=34, DIGIT=64, COMMENT=54, 
		CLOSE_SQUARE=33, NEWPAIR=24, EXIT=13, GREATER_THAN=44, SND=27, CHAR_TYPE=30, 
		NULL=58, ELSE=18, UNDERSCORE=61, SEMI_COLON=23, INT_TYPE=28, MINUS=43, 
		TRUE=56, MUL=39, PRINT=14, CHR=38, FI=19, SKIP=5, WS=55, LOWERCASE=62, 
		SMALLER_OR_EQUAL=47, LIBNAME=60, READ=10, STRING_TYPE=31, OPEN_PARENTHESES=1, 
		LEN=36, CALL=25, DIV=40, END=8, FALSE=57, STRING=53;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'import'", "','", "'skip'", "'='", "'begin'", 
		"'end'", "'is'", "'read'", "'free'", "'return'", "'exit'", "'print'", 
		"'println'", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'done'", 
		"';'", "'newpair'", "'call'", "'fst'", "'snd'", "'int'", "'bool'", "'char'", 
		"'string'", "'['", "']'", "'pair'", "'!'", "'len'", "'ord'", "'chr'", 
		"'*'", "'/'", "'%'", "'+'", "'-'", "'>'", "'>='", "'<'", "'<='", "'=='", 
		"'!='", "'&&'", "'||'", "CHAR", "STRING", "COMMENT", "WS", "'true'", "'false'", 
		"'null'", "ID", "LIBNAME", "'_'", "LOWERCASE", "UPPERCASE", "DIGIT"
	};
	public static final int
		RULE_program = 0, RULE_importlib = 1, RULE_function = 2, RULE_param = 3, 
		RULE_stat = 4, RULE_assign_lhs = 5, RULE_assign_rhs = 6, RULE_pair_elem = 7, 
		RULE_type = 8, RULE_base_type = 9, RULE_array_type = 10, RULE_pair_type = 11, 
		RULE_pair_elem_type = 12, RULE_expr = 13, RULE_unary_exp = 14, RULE_unary_oper = 15, 
		RULE_ident = 16, RULE_array_elem = 17, RULE_int_liter = 18, RULE_digit = 19, 
		RULE_int_sign = 20, RULE_bool_liter = 21, RULE_char_liter = 22, RULE_str_liter = 23, 
		RULE_array_liter = 24, RULE_pair_liter = 25;
	public static final String[] ruleNames = {
		"program", "importlib", "function", "param", "stat", "assign_lhs", "assign_rhs", 
		"pair_elem", "type", "base_type", "array_type", "pair_type", "pair_elem_type", 
		"expr", "unary_exp", "unary_oper", "ident", "array_elem", "int_liter", 
		"digit", "int_sign", "bool_liter", "char_liter", "str_liter", "array_liter", 
		"pair_liter"
	};

	@Override
	public String getGrammarFileName() { return "BasicParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public FunctionContext function;
		public List<FunctionContext> funcs = new ArrayList<FunctionContext>();
		public StatContext body;
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public TerminalNode EOF() { return getToken(BasicParser.EOF, 0); }
		public List<ImportlibContext> importlib() {
			return getRuleContexts(ImportlibContext.class);
		}
		public ImportlibContext importlib(int i) {
			return getRuleContext(ImportlibContext.class,i);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(BasicParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(52); importlib();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58); match(BEGIN);
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(59); ((ProgramContext)_localctx).function = function();
					((ProgramContext)_localctx).funcs.add(((ProgramContext)_localctx).function);
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(65); ((ProgramContext)_localctx).body = stat(0);
			setState(66); match(END);
			setState(67); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportlibContext extends ParserRuleContext {
		public Token id;
		public TerminalNode SEMI_COLON() { return getToken(BasicParser.SEMI_COLON, 0); }
		public TerminalNode IMPORT() { return getToken(BasicParser.IMPORT, 0); }
		public TerminalNode ID() { return getToken(BasicParser.ID, 0); }
		public TerminalNode LIBNAME() { return getToken(BasicParser.LIBNAME, 0); }
		public ImportlibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importlib; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitImportlib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportlibContext importlib() throws RecognitionException {
		ImportlibContext _localctx = new ImportlibContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importlib);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(IMPORT);
			setState(70);
			((ImportlibContext)_localctx).id = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==LIBNAME) ) {
				((ImportlibContext)_localctx).id = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(71); match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TypeContext t;
		public IdentContext id;
		public ParamContext param;
		public List<ParamContext> params = new ArrayList<ParamContext>();
		public StatContext body;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(BasicParser.COMMA); }
		public TerminalNode CLOSE_PARENTHESES() { return getToken(BasicParser.CLOSE_PARENTHESES, 0); }
		public TerminalNode OPEN_PARENTHESES() { return getToken(BasicParser.OPEN_PARENTHESES, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode IS() { return getToken(BasicParser.IS, 0); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(BasicParser.COMMA, i);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); ((FunctionContext)_localctx).t = type();
			setState(74); ((FunctionContext)_localctx).id = ident();
			setState(75); match(OPEN_PARENTHESES);
			setState(84);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << BOOL_TYPE) | (1L << CHAR_TYPE) | (1L << STRING_TYPE) | (1L << PAIR))) != 0)) {
				{
				setState(76); ((FunctionContext)_localctx).param = param();
				((FunctionContext)_localctx).params.add(((FunctionContext)_localctx).param);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(77); match(COMMA);
					setState(78); ((FunctionContext)_localctx).param = param();
					((FunctionContext)_localctx).params.add(((FunctionContext)_localctx).param);
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(86); match(CLOSE_PARENTHESES);
			setState(87); match(IS);
			setState(88); ((FunctionContext)_localctx).body = stat(0);
			setState(89); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext t;
		public IdentContext id;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); ((ParamContext)_localctx).t = type();
			setState(92); ((ParamContext)_localctx).id = ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStmtContext extends StatContext {
		public ExprContext cond;
		public StatContext ifbranch;
		public StatContext elsebranch;
		public TerminalNode THEN() { return getToken(BasicParser.THEN, 0); }
		public TerminalNode IF() { return getToken(BasicParser.IF, 0); }
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode FI() { return getToken(BasicParser.FI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(BasicParser.ELSE, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public IfStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SkipStmtContext extends StatContext {
		public TerminalNode SKIP() { return getToken(BasicParser.SKIP, 0); }
		public SkipStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitSkipStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompoundStmtContext extends StatContext {
		public StatContext head;
		public StatContext tail;
		public TerminalNode SEMI_COLON() { return getToken(BasicParser.SEMI_COLON, 0); }
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public CompoundStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitCompoundStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintStmtContext extends StatContext {
		public ExprContext child;
		public TerminalNode PRINT() { return getToken(BasicParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitPrintStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExitStmtContext extends StatContext {
		public ExprContext child;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EXIT() { return getToken(BasicParser.EXIT, 0); }
		public ExitStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitExitStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintLnStmtContext extends StatContext {
		public ExprContext child;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINTLN() { return getToken(BasicParser.PRINTLN, 0); }
		public PrintLnStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitPrintLnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStmtContext extends StatContext {
		public ExprContext child;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(BasicParser.RETURN, 0); }
		public ReturnStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReadStmtContext extends StatContext {
		public Assign_lhsContext lhs;
		public Assign_lhsContext assign_lhs() {
			return getRuleContext(Assign_lhsContext.class,0);
		}
		public TerminalNode READ() { return getToken(BasicParser.READ, 0); }
		public ReadStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitReadStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDeclAssnStmtContext extends StatContext {
		public TypeContext t;
		public IdentContext id;
		public Assign_rhsContext rhs;
		public Assign_rhsContext assign_rhs() {
			return getRuleContext(Assign_rhsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(BasicParser.EQUAL, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public VarDeclAssnStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitVarDeclAssnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStmtContext extends StatContext {
		public ExprContext cond;
		public StatContext body;
		public TerminalNode WHILE() { return getToken(BasicParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(BasicParser.DO, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DONE() { return getToken(BasicParser.DONE, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public WhileStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BeginStmtContext extends StatContext {
		public StatContext body;
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(BasicParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public BeginStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitBeginStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentStmtContext extends StatContext {
		public Assign_lhsContext lhs;
		public Assign_rhsContext rhs;
		public Assign_rhsContext assign_rhs() {
			return getRuleContext(Assign_rhsContext.class,0);
		}
		public Assign_lhsContext assign_lhs() {
			return getRuleContext(Assign_lhsContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(BasicParser.EQUAL, 0); }
		public AssignmentStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitAssignmentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FreeStmtContext extends StatContext {
		public ExprContext child;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode FREE() { return getToken(BasicParser.FREE, 0); }
		public FreeStmtContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitFreeStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		return stat(0);
	}

	private StatContext stat(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatContext _localctx = new StatContext(_ctx, _parentState);
		StatContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_stat, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			switch (_input.LA(1)) {
			case SKIP:
				{
				_localctx = new SkipStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(95); match(SKIP);
				}
				break;
			case INT_TYPE:
			case BOOL_TYPE:
			case CHAR_TYPE:
			case STRING_TYPE:
			case PAIR:
				{
				_localctx = new VarDeclAssnStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(96); ((VarDeclAssnStmtContext)_localctx).t = type();
				setState(97); ((VarDeclAssnStmtContext)_localctx).id = ident();
				setState(98); match(EQUAL);
				setState(99); ((VarDeclAssnStmtContext)_localctx).rhs = assign_rhs();
				}
				break;
			case FST:
			case SND:
			case ID:
				{
				_localctx = new AssignmentStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(101); ((AssignmentStmtContext)_localctx).lhs = assign_lhs();
				setState(102); match(EQUAL);
				setState(103); ((AssignmentStmtContext)_localctx).rhs = assign_rhs();
				}
				break;
			case READ:
				{
				_localctx = new ReadStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(105); match(READ);
				setState(106); ((ReadStmtContext)_localctx).lhs = assign_lhs();
				}
				break;
			case FREE:
				{
				_localctx = new FreeStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(107); match(FREE);
				setState(108); ((FreeStmtContext)_localctx).child = expr(0);
				}
				break;
			case RETURN:
				{
				_localctx = new ReturnStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(109); match(RETURN);
				setState(110); ((ReturnStmtContext)_localctx).child = expr(0);
				}
				break;
			case EXIT:
				{
				_localctx = new ExitStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(111); match(EXIT);
				setState(112); ((ExitStmtContext)_localctx).child = expr(0);
				}
				break;
			case PRINT:
				{
				_localctx = new PrintStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(113); match(PRINT);
				setState(114); ((PrintStmtContext)_localctx).child = expr(0);
				}
				break;
			case PRINTLN:
				{
				_localctx = new PrintLnStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(115); match(PRINTLN);
				setState(116); ((PrintLnStmtContext)_localctx).child = expr(0);
				}
				break;
			case IF:
				{
				_localctx = new IfStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(117); match(IF);
				setState(118); ((IfStmtContext)_localctx).cond = expr(0);
				setState(119); match(THEN);
				setState(120); ((IfStmtContext)_localctx).ifbranch = stat(0);
				setState(121); match(ELSE);
				setState(122); ((IfStmtContext)_localctx).elsebranch = stat(0);
				setState(123); match(FI);
				}
				break;
			case WHILE:
				{
				_localctx = new WhileStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(125); match(WHILE);
				setState(126); ((WhileStmtContext)_localctx).cond = expr(0);
				setState(127); match(DO);
				setState(128); ((WhileStmtContext)_localctx).body = stat(0);
				setState(129); match(DONE);
				}
				break;
			case BEGIN:
				{
				_localctx = new BeginStmtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(131); match(BEGIN);
				setState(132); ((BeginStmtContext)_localctx).body = stat(0);
				setState(133); match(END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CompoundStmtContext(new StatContext(_parentctx, _parentState));
					((CompoundStmtContext)_localctx).head = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_stat);
					setState(137);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(138); match(SEMI_COLON);
					setState(139); ((CompoundStmtContext)_localctx).tail = stat(2);
					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
